Allow to test on modern Java